[metadata]
name = traktpy
author = Jakub Molinski
author-email = jakub@molinski.dev
summary = Python wrapper for Trakt REST api
description-file = README.md
keywords = trakt.tv, api, client, wrapper
platforms = any
home-page = https://github.com/jmolinski/traktpy
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries

[pbr]
skip_changelog = true

[files]
packages =
    trakt

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[egg_info]
post-hook.write_version = trakt.hooks.write_version
